# LinAlg-Studio

./: LICENSE  README.md  pyproject.toml
src/sols/: __init__.py
src/sols/linalg/: vector2.py
tests/: test_vector2.py
